Update the Data model
